# s3glob

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  dist-workspace.toml  mise.toml  plan-dist-manifest.json  release.toml
.github/workflows/: release.yml  rust.yml
src/: download.rs  glob_matcher.rs  main.rs  messaging.rs  patterns.rs  progress.rs
src/glob_matcher/: engine.rs  glob.rs  proptests.rs
tests/: integration.rs  minio_testcontainer.rs
wix/: main.wxs
