[package]
name = "s3glob"
version = "0.1.0"
edition = "2021"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
license = "MIT, APACHE-2.0"
repository = "https://github.com/quodlibetor/s3glob"
homepage = "https://github.com/quodlibetor/s3glob"
readme = "README.md"
description = "A fast aws s3 ls that supports glob patterns"
publish = false

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "52B953CD-E011-4E0F-B58F-C28AE9AD5A91"
path-guid = "17776F56-17A4-455A-9449-681E647216CB"
license = false
eula = false

[dependencies]
anyhow = "1.0"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
globset = "0.4"
humansize = { version = "2.0.0", features = ["no_alloc"] }
num-format = "0.4"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rstest = "0.23"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
