[package]
name = "s3glob"
version = "0.4.5"
edition = "2024"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
license = "MIT, APACHE-2.0"
repository = "https://github.com/quodlibetor/s3glob"
homepage = "https://github.com/quodlibetor/s3glob"
readme = "README.md"
description = "A fast aws s3 ls and downloader that supports glob patterns"
publish = false

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "52B953CD-E011-4E0F-B58F-C28AE9AD5A91"
path-guid = "17776F56-17A4-455A-9449-681E647216CB"
license = false
eula = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
futures = "0.3"
globset = "0.4"
humansize = { version = "2.0.0", features = ["no_alloc"] }
itertools = "0.14.0"
num-format = "0.4"
regex = "1.10"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_fs = { version = "1.1.2", features = ["color"] }
assert_cmd = "2.0"
predicates = "3.1"
assert2 = "0.3"
rstest = "0.25"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["minio"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
